fixed text wrapping on calendar events

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -51,6 +51,7 @@ body {
 /* Calendar */
 #calendar {
   background-color: white;
+  margin-bottom: 10px;
 }
 
 .list-group-item {
